--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Jeremias Deck",
   "license": "MIT",
   "dependencies": {
+    "colors": "^1.3.3",
+    "node-latex": "^2.4.4",
     "rimraf": "^2.6.3",
     "xmldom": "^0.1.27"
   }
